Producer and consumer finished.

--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 server.port=8081
 
+# Datasource configuration
 spring.datasource.url=jdbc:postgresql://localhost:5433/ms-user
 spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
+
+# RabbitMQ configuration
+spring.rabbitmq.addresses=amqps://sacckswr:yIp2x65AMm6YD18JuSDTp-qnKvID1WT9@stingray.rmq.cloudamqp.com/sacckswr
+broker.queue.email.name=default.email
