--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ms-email
 spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
+
+spring.rabbitmq.addresses=amqps://sacckswr:yIp2x65AMm6YD18JuSDTp-qnKvID1WT9@stingray.rmq.cloudamqp.com/sacckswr
+
+broker.queue.email.name=default.email
