--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -5,6 +5,16 @@ spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 
-spring.rabbitmq.addresses=amqps://sacckswr:yIp2x65AMm6YD18JuSDTp-qnKvID1WT9@stingray.rmq.cloudamqp.com/sacckswr
+# Change the address to a valid one from AMQP (https://www.cloudamqp.com/)
+spring.rabbitmq.addresses=amqps://******:yIp2x65AMm6YD18JuSDTp-qnKvID1WT9@stingray.rmq.cloudamqp.com/******
 
 broker.queue.email.name=default.email
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Change the username to a valid Gmail account and get the App Password from your Google Account
+spring.mail.username=***@gmail.com
+spring.mail.password=**** **** **** ****
