--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 
-# RabbitMQ configuration
-spring.rabbitmq.addresses=amqps://sacckswr:yIp2x65AMm6YD18JuSDTp-qnKvID1WT9@stingray.rmq.cloudamqp.com/sacckswr
+# Change the address to a valid one from AMQP (https://www.cloudamqp.com/)
+spring.rabbitmq.addresses=amqps://******:yIp2x65AMm6YD18JuSDTp-qnKvID1WT9@stingray.rmq.cloudamqp.com/******
 broker.queue.email.name=default.email
